fixed the white space on home page on mobile

--- a/files/main_style.css
+++ b/files/main_style.css
@@ -149,12 +149,14 @@
  #wsite-search-sidebar .close-btn { display: none; }
  .wsite-com-checkout-section .wsite-form-field select, .wsite-com-checkout-section .wsite-form-field input, .wsite-com-checkout-section .wsite-form-field .select2-container { height: 40px; }
  .wsite-com-checkout-section .wsite-form-field input[type="radio"] { display: inline-block; width: 16px; height: 16px; margin: 0; }
+ .notmobile {height:91px}
  @media screen and (max-width: 992px) {
  .container { max-width: 768px; overflow-wrap: break-word; }
  .content-wrap .container { padding: 20px; }
  .footer-wrap .wsite-footer { width: 100%; padding: 40px 20px 20px; box-sizing: border-box; }
  .footer-wrap td.wsite-multicol-col { margin-bottom: 25px !important; }
  .footer-wrap td.wsite-multicol-col:last-child { width: 100% !important; }
+ .notmobile {height:91px}
  }
  @media screen and (max-width: 767px) {
  body { background-size: initial; background-position: top center; background-attachment: inherit; font-size: 15px; }
@@ -249,6 +251,7 @@
  #wsite-com-checkout-list .wsite-remove-button, #wsite-com-checkout-summary-list .wsite-remove-button { top: 44px; left: -10px; }
  .wsite-com-continue-shopping .caret { display: inline-block; margin-top: 2px; }
  .wsite-com-checkout-payment-column, .wsite-com-checkout-summary-column { float: none; width: 100%; }
+  .notmobile {height:91px}
  }
  @media screen and (max-width: 480px) {
  #wsite-com-store .wsite-com-category-subcategory-group .wsite-com-column, #wsite-com-store .wsite-com-category-product-featured-group .wsite-com-column, #wsite-com-store .wsite-com-category-product-group .wsite-com-column { float: none; width: 100% !important; }
@@ -256,6 +259,7 @@
  #wsite-com-checkout-list tbody td:first-child, #wsite-com-checkout-summary-list tbody td:first-child { width: 0; padding: 0; }
  #wsite-com-checkout-list .wsite-com-checkout-item-details-inner, #wsite-com-checkout-summary-list .wsite-com-checkout-item-details-inner { padding-left: 0; }
  #mobilevid { width: 100%}
+ .notmobile {height:0px}
  }
 
 div.paragraph ul, div.paragraph ol { padding-left: 3em !important; margin: 5px 0 !important; }
